Chapter 3. Text Representation

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .venv
 practical-natural-language-processing-a-comprehensive-guide-to-building-real-world-nlp-systems.pdf
+GoogleNews-vectors-negative300.bin
